syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Likes";

import "Likes/Models.proto";

service LikesApi {
  rpc GetByIds(GetLikesByIdsRequest) returns (GetLikesByIdsResult);
}
